# gvc

./: .clang-format  CMakeLists.txt  README.md  config.h.in  format_source_files.sh
app/: CMakeLists.txt
app/common/: program_options_lite.cpp  program_options_lite.h
app/decoder/: CMakeLists.txt  main  main.cpp
app/encoder/: CMakeLists.txt  GvcEncoderApp.cpp  GvcEncoderApp.h  GvcEncoderCfgApp.cpp  GvcEncoderCfgApp.h  main.cpp
cfg/: encoder.cfg
lib/: .directory  CMakeLists.txt  GvcBlockUnit.cpp  GvcBlockUnit.h  GvcEncBlockUnit.cpp  GvcEncBlockUnit.h  GvcEncFrameUnit.cpp  GvcEncFrameUnit.h  GvcEncoder.cpp  GvcEncoder.h  GvcFrameUnit.cpp  GvcFrameUnit.h  GvcFrameUnitSym.cpp  GvcFrameUnitSym.h  GvcFrameUnitYuv.cpp  GvcFrameUnitYuv.h  GvcLogger.cpp  GvcLogger.h  TComChromaFormat.cpp  TComChromaFormat.h  TVideoIOYuv.cpp  TVideoIOYuv.h  TypeDef.h
