###
### CMakeLists for gvc lib
###

INCLUDE_DIRECTORIES(
  ${CMAKE_BINARY_DIR}
  ${CMAKE_SOURCE_DIR}
)

SET(GVC_LIB_SRCS
  GvcEncoder.cpp
  GvcLogger.cpp
  GvcFrameUnit.cpp
  GvcFrameUnitYuv.cpp
  GvcFrameUnitSym.cpp
  GvcBlockUnit.cpp
  TVideoIOYuv.cpp
  TComChromaFormat.cpp)

ADD_LIBRARY( ${PROJECT_LIBRARY} STATIC ${GVC_LIB_SRCS})

TARGET_INCLUDE_DIRECTORIES(${PROJECT_LIBRARY}
    PUBLIC
        $<INSTALL_INTERFACE:include>
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
)

SET_TARGET_PROPERTIES( ${PROJECT_LIBRARY}
   PROPERTIES VERSION ${GVC_VERSION}
   SOVERSION ${GVC_VERSION_MAJOR}
)
